docs(swagger module): change default to swagger module
n
